--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 1,
    "id": "79267e60-984d-458b-84fe-a399ffe0b780",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "\n",
     "f(x) = $\\sum_i f_i(x)$\n",
     "\n",
-    "Stagewise (say vs stepwise) means we can't go back and edit. Each 'stage' freezes all previous terms. Section **3.3.3 Forward-Stagewise Regression** <a href=\"https://web.stanford.edu/~hastie/ElemStatLearn/\">The Elements of Statistical Learning</a> is helpful.\n",
+    "Stagewise (as opposed to _stepwise_) means we can't go back and edit. Each 'stage' freezes all previous terms. Section **3.3.3 Forward-Stagewise Regression** <a href=\"https://web.stanford.edu/~hastie/ElemStatLearn/\">The Elements of Statistical Learning</a> is helpful.\n",
     "\n",
     "The boosting paradigm mentioned is a reference to Freund and Schapire's <a href=\"https://cseweb.ucsd.edu/~yfreund/papers/IntroToBoosting.pdf\">paper</a> in the late 90s that introduced the AdaBoost algorithm. The idea of boosting is to build a many models in a sequence. Each model learns from the mistakes from the previous model.\n",
     "\n",
@@ -92,6 +92,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "4ebcdcc4-a0ef-4a90-9b6c-66cd88f491dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First, we setup some data to demonstrate each function with\n",
+    "\n",
+    "# True function\n",
+    "f_star = lambda x: x**2\n",
+    "\n",
+    "# Estimated function\n",
+    "# (we introduce a little bit of error)\n",
+    "f = lambda x: (x + 0.1)**2\n",
+    "\n",
+    "# Points to evaluate over\n",
+    "x = np.arange(0, .5, step=0.05)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "17ae5fd2-a28f-4760-ae93-4b73ca1ceeb4",
    "metadata": {},
@@ -103,42 +123,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 88,
    "id": "28181974-64b4-4e2e-b2c6-0a8a038c277e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5.000e-05, 4.500e-04, 1.250e-03, 2.450e-03, 4.050e-03, 6.050e-03,\n",
-       "       8.450e-03, 1.125e-02, 1.445e-02, 1.805e-02])"
+       "array([5.00e-05, 2.00e-04, 4.50e-04, 8.00e-04, 1.25e-03, 1.80e-03,\n",
+       "       2.45e-03, 3.20e-03, 4.05e-03, 5.00e-03])"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def least_squares(y_true, y_pred):\n",
-    "    return 0.5 * (y_true - y_pred)**2\n",
+    "    loss = .5 * (y_true - y_pred)**2\n",
+    "    return loss\n",
     "\n",
-    "# Labels\n",
-    "y = [1, 1, 0, 1, 0]\n",
-    "\n",
-    "# True function\n",
-    "f_star = lambda x: x**2\n",
-    "\n",
-    "# Estimated function\n",
-    "# (here, we introduce a little bit of error)\n",
-    "f = lambda x: (x + 0.1)**2\n",
-    "\n",
-    "# Points to evaluate over\n",
-    "x = np.arange(0, 1, step=0.1)\n",
-    "\n",
-    "# In practice, we'd take the average of this\n",
-    "# and try to minimize the average. You will\n",
-    "# see that in this paper\n",
     "least_squares(f_star(x), f(x))"
    ]
   },
@@ -154,24 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 89,
    "id": "a9664703-59b6-44ca-b8db-90e043128314",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.01, 0.03, 0.05, 0.07, 0.09, 0.11, 0.13, 0.15, 0.17, 0.19])"
+       "array([0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 ])"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def least_absolute_deviation(y_true, y_pred):\n",
-    "    return np.abs(y_true - y_pred)\n",
+    "    loss = np.abs(y_true - y_pred)\n",
+    "    return loss\n",
     "\n",
     "least_absolute_deviation(f_star(x), f(x))"
    ]
@@ -183,47 +189,45 @@
    "source": [
     "**huber-m**\n",
     "\n",
-    "$l(y, f) =  \\frac{1}{2} (y - f)^2 \\;\\;\\; |y - f| \\le \\delta$\n",
+    "if $|y - f| \\le \\delta$ then:\n",
     "\n",
-    "otherwise:\n",
+    "$l(y, f) =  \\frac{1}{2} (y - f)^2$\n",
     "\n",
-    "$l(y, f) =  \\delta(|y - f| - \\frac{\\delta}{2})$"
+    "else:\n",
+    "\n",
+    "$l(y, f) =  \\delta(|y - f| - \\frac{\\delta}{2})$\n",
+    "\n",
+    "This is the first time I had across Huber loss. The paper can be found <a href=\"https://projecteuclid.org/journals/annals-of-mathematical-statistics/volume-35/issue-1/Robust-Estimation-of-a-Location-Parameter/10.1214/aoms/1177703732.full\">here</a>.\n",
+    "\n",
+    "The \"m\" I believe comes from the term \"m-estimator\". I _think_ the m means \"maximum likelihood type\" estimator. See <a href=\"https://www.statisticalconsultants.co.nz/blog/m-estimators.html\">here</a>. It comes from robust statistical methods. Something I myself would need to learn more about. This function acts as a switch. When the error gets too high it acts as a switch to a loss that doesn't penalize as heavily."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
-   "id": "346ad8d0-0d39-448d-abdf-c4d1f1ee888f",
+   "execution_count": 90,
+   "id": "dd21bf46-c616-4005-aff9-34604511aa66",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.  , 0.01, 0.04, 0.09, 0.16, 0.25, 0.36, 0.49, 0.64, 0.81])"
+       "array([5.00e-05, 2.00e-04, 4.50e-04, 8.00e-04, 1.25e-03, 1.80e-03,\n",
+       "       2.45e-03, 3.20e-03, 4.05e-03, 5.00e-03])"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def huber(y_true, y_pred, delta):\n",
-    "    \n",
-    "    # First take difference (do this once)\n",
+    "def huber(y_true, y_pred, delta=5.):\n",
     "    z = y_true - y_pred\n",
-    "    \n",
-    "    # Find points which satisfy first condition\n",
     "    z_abs = np.abs(z)\n",
-    "    \n",
-    "    z_abs = \n",
-    "    \n",
-    "    # Which points staisfy hte following?\n",
-    "    I = np.abs(y_true - y_pred) <= delta\n",
-    "    \n",
-    "    return y\n",
+    "    loss = np.where(z_abs <= delta, .5 * z**2, delta * (z_abs - delta/2.))\n",
+    "    return loss\n",
     "\n",
-    "huber(f_star(x), f(x), delta=0.1)"
+    "huber(f_star(x), f(x))"
    ]
   },
   {
@@ -231,36 +235,58 @@
    "id": "44eb4459-c304-4bd0-a34d-440332f95ea7",
    "metadata": {},
    "source": [
-    "This is the first time I've come across Huber loss. The paper can be found <a href=\"https://projecteuclid.org/journals/annals-of-mathematical-statistics/volume-35/issue-1/Robust-Estimation-of-a-Location-Parameter/10.1214/aoms/1177703732.full\">here</a>. It seems to be a compromise between least-squares and least-absolute deviation. I'm not sure how $\\delta$ is chosen in practice. \n",
-    "    \n",
-    "\n",
     "**multi-class logistic likelihood**\n",
     "\n",
-    "$l(y, f) = - \\sum_k y_k log p_k$"
+    "$l(y, f) = - \\sum_k^{\\text{n_classes}} y_k \\text{log} \\, p_k$\n",
+    "\n",
+    "The variable k is to iterate over each class. $y_k$ is either 0/1 and $p_k$ is your models outputted \"probability\" for that class. I put the probability in quotes because you don't always get good probabiity estimates in practice.\n",
+    "\n",
+    "We can write down the special case of a binary label (0/1):\n",
+    "\n",
+    "$l(y, f) = -  \\big( y_k \\text{log} \\, p_k + (1 - y_k) \\text{log} \\, (1 - p_k) \\big)$\n",
+    "\n",
+    "This acts as a switch. When the label is 1 we get:\n",
+    "\n",
+    "$l(y, f) = - \\text{log} \\, p_k$\n",
+    "\n",
+    "When the label is 0 we get:\n",
+    "\n",
+    "$l(y, f) = - \\text{log} \\, (1 - p_k)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 97,
    "id": "8d4b82bb-9b56-4ae5-8b87-5843f929bfd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.  , 0.01, 0.04, 0.09, 0.16, 0.25, 0.36, 0.49, 0.64, 0.81])"
+       "array([0.69815968, 0.70446046, 0.71334717, 0.66238538, 0.64915934,\n",
+       "       0.75627179, 0.77634377, 0.59701423, 0.57593942, 0.55329211])"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def logistic_likelihood(y, f, delta):\n",
-    "    return y\n",
+    "def logistic_likelihood(y_true, y_pred, delta):\n",
+    "    loss = -(y_true * np.log(y_pred) + (1. - y_true) * np.log(1 - y_pred))\n",
+    "    return loss\n",
     "\n",
-    "logistic_likelihood(f_star(x), f(x), delta=0.1)"
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "y_true = np.random.randint(0, 2, len(x))\n",
+    "\n",
+    "# Pass through sigmoid to get a number\n",
+    "# between 0 and 1. Acts like a probability\n",
+    "y_pred = sigmoid(f(x))\n",
+    "\n",
+    "logistic_likelihood(y_true, sigmoid(f(x)), delta=0.1)"
    ]
   },
   {
@@ -280,7 +306,7 @@
     "where the individual additive components are regression trees, and tools\n",
     "for interpreting such “TreeBoost” models are presented.</i>\n",
     "\n",
-    "They also mention that when the additive model is a decision tree (which they give a special name: \"TreeBoost\") they are able to make specific optimizations."
+    "They exploit the special case when the additive model is comprised of decision trees--which they then call \"TreeBoost\". Note that <a href=\"https://xgboost.readthedocs.io/en/stable/\">XGBoost</a> by default uses TreeBoost."
    ]
   },
   {
@@ -292,7 +318,7 @@
     "mining less than clean data. Connections between this approach and the\n",
     "boosting methods of Freund and Shapire and Friedman, Hastie and Tibshirani are discussed.</i>\n",
     "\n",
-    "Lastly, they mention how all this ties in with the famous Adaboost algorithm. Which I believe, was the first boosting algorithm developed."
+    "Lastly, they mention how all this ties in with the Adaboost algorithm (which introduced the idea of boosting)."
    ]
   },
   {
