--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 98,
    "id": "4ebcdcc4-a0ef-4a90-9b6c-66cd88f491dc",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 99,
    "id": "28181974-64b4-4e2e-b2c6-0a8a038c277e",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "       2.45e-03, 3.20e-03, 4.05e-03, 5.00e-03])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "id": "dd21bf46-c616-4005-aff9-34604511aa66",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "       2.45e-03, 3.20e-03, 4.05e-03, 5.00e-03])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,18 +256,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 101,
    "id": "8d4b82bb-9b56-4ae5-8b87-5843f929bfd4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.69815968, 0.70446046, 0.71334717, 0.66238538, 0.64915934,\n",
-       "       0.75627179, 0.77634377, 0.59701423, 0.57593942, 0.55329211])"
+       "array([0.69815968, 0.68196046, 0.67334717, 0.72488538, 0.73915934,\n",
+       "       0.75627179, 0.77634377, 0.79951423, 0.57593942, 0.55329211])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
    "id": "6d2ee195-4d0c-4839-a113-f4b1fb917367",
    "metadata": {},
    "source": [
-    "> <i>In the function estimation or \"predictive learning\" problem, one has a system consisting of a random \"output\" or \"response\" variable y and a set of random \"input\" or \"explanatory\" variables x = {x1...xn}</i>\n",
+    "> <i>In the function estimation or \"predictive learning\" problem, one has a system consisting of a random \"output\" or \"response\" variable y and a set of random \"input\" or \"explanatory\" variables $\\bf{x} = \\{x_1, ..., x_n\\}$</i>\n",
     "\n",
     "You are given labeled data (i.e., training data)"
    ]
@@ -344,36 +344,27 @@
    "id": "3fbc69fe-e621-4c48-a4f6-e1da3be7b5b5",
    "metadata": {},
    "source": [
-    "`Using a “training” sample yi\u0004 xiN\n",
-    "1 ofknown \u0004y\u0004 x\u0005-values, the goal is to\n",
-    "obtain an estimate or approximation F\u0001\u0004x\u0005, ofthe function F∗\u0004x\u0005 mapping\n",
-    "x to y, that minimizes the expected value ofsome specified loss function\n",
-    "L\u0004y\u0004 F\u0004x\u0005\u0005 over the joint distribution ofall \u0004y\u0004 x\u0005-values,\n",
-    "F∗ = arg minF\n",
-    "Ey\u0004 xL\u0004y\u0004 F\u0004x\u0005\u0005 = arg minF\n",
-    "Ex\u0007Ey (1) \u0004L\u0004y\u0004 F\u0004x\u0005\u0005\u0005 \b x\t\u0005`\n",
+    ">Using a “training” sample $\\{y_i, \\bf{x_i}\\}_{i}^{N}$\n",
+    "1 of known $(y, \\bf{x})$-values, the goal is to\n",
+    "obtain an estimate or approximation $\\hat{F}(\\bf{x})$, of the function $F^{*}(x)$ mapping $\\bf{x}$ to y, that minimizes the expected value of some specified loss function\n",
+    "$L(y, F(\\bf{x}))$ over the joint distribution of all ($y, \\bf{x})$-values,\n",
+    "<br/>\n",
+    "<br/>\n",
+    "$F^* = \\text{argmin}_F E_{y, \\bf{x}} L(y, F(\\bf{x})) = \\text{argmin}_F E_x [E_y(L(y, F(\\bf{x}))) | \\bf{x}]$\n",
     "\n",
-    "$F^{*}(x)$ is the true function. Inknown in practice (unless you are simulating data). But we can observe how inputs are relate to the outputs (i.e., labeled data). $F(x)$ is the function we learn from data. But to do this, we need a measure of how good we are doing. Hence, the loss function:\n",
+    "$F^{*}(x)$ is the true function. Unknown in practice (unless you are simulating data). But we can observe how inputs are relate to the outputs via labeled data. $F(x)$ is the function we learn from data. But to do learning, we need a measure of how good we are doing. Hence, the loss function:\n",
     "\n",
     "$L(y, F(x)) = L(F^{*}(x), F(x))$.\n",
     "\n",
     "This loss can output a vector in general, but to keep it simple we have it output a scalar (i.e., a real number). Smaller loss is better (less error).\n",
     "\n",
-    "We need to compute the loss over each (x,y) pair. And, if the data is extremely dense in some regions\n",
+    "We need to compute the loss over each $(\\vec{x},y)$ pair. When the losses can be computed in parallel, we call that a univariate loss function. The opposite of this are multivariate losses. For example, see work done by Thorsten <a href=\"https://www.cs.cornell.edu/people/tj/publications/joachims_05a.pdf\">here</a>. Multivariate losses are used when designing a ranking algorithm.\n",
     "\n",
-    "A loss will need to be computed for each possible (x,y) pair. And we want to take the average loss (could take the sum, but that can become a very large number quickly). To take an average, divide all x-y space into small little rectangular regions. Now, start sampling from the true function ($F^{*}(x)$). If we record the number of times a point falls in this little region and divide by the number of all points, we get an estimate of $P(x, y)$ for that (x,y) location. The number of points that falled in that region can be recovered by multiplying by its volume (volume = $\\Delta x \\Delta y$). So number of points $ = \\text{probabilty density} * {volume}$\n",
-    "\n",
-    "If we do bad in regions that never occur, do we care? The idea is to do well in regions that do occur and not only that, but are very likely to occure. That is, we need a function that assigns a probability to each point in x-y space. This is what $P(x, y)$ gives us. It's known as the joint probability distribution.\n",
-    "\n",
-    "average loss = $\\int_x \\int_y P(x, y) L(y, F(x)) \\, dx dy$\n",
-    "\n",
-    "You might be used to seeing averages like this:\n",
-    "\n",
-    "average loss = $\\sum_i \\frac{1}{N}x_i$ but in this case, $\\frac{1}{N}$ is actually a probability. It's saying each point is equally likely. That's why need the probabilty function of $P(x, y)$. Because each pair is not equally likely in the general case. \n",
+    "We want to summarize all these losses. A way to do this is to take a sum or an average. Typically the average loss (could take the sum, but that could become very large) is used.\n",
     "\n",
     "To get the form you see in this paper, I actually answered this many years ago <a href=\"https://math.stackexchange.com/a/623473/118474\">here</a>. But here it is again:\n",
     "\n",
-    "$\\int_x \\int_y L(y, F(x)) P(x, y) \\, dx dy$\n",
+    "$\\text{Expected Loss} = \\int_x \\int_y L(y, F(x)) P(x, y) \\, dx dy$\n",
     "\n",
     "By Bayes' theorem: $P(x, y) = P(x) P(y | x)$\n",
     "\n",
@@ -397,8 +388,7 @@
     "\n",
     "Hence:\n",
     "\n",
-    "$F^* = {\\text{argmin}}_F \\, E_{xy}[L(y, F(x))] = {\\text{argmin}}_F \\, \\int_x \\int_y P(x, y) L(y, F(x)) \\, dx dy$\n",
-    "\n"
+    "$F^* = {\\text{argmin}}_F \\, E_{xy}[L(y, F(x))] = {\\text{argmin}}_F \\, \\int_x \\int_y P(x, y) L(y, F(x)) \\, dx dy$"
    ]
   },
   {
@@ -406,8 +396,7 @@
    "id": "f6a9d1a0-628e-4cc5-8f37-fe2c69e26534",
    "metadata": {},
    "source": [
-    "`Frequently employed loss functions L\u0004y\u0004 F\u0005 include squared-error \u0004y − F\u00052\n",
-    "and absolute error \by − F\b for y ∈ R1 (regression) and negative binomial loglikelihood, log\u00041 + e−2yF\u0005, when y ∈ −1\u0004 1 (classification).`\n",
+    "> Frequently employed loss functions $L(y, F)$ include squared-error $(y − F^2)$ and absolute error $|y − F|$ for $y \\in R^1$ (regression) and negative binomial loglikelihood, $log(1 + e^{−2yF}$, when $y \\in \\{−1, 1\\}$ (classification).\n",
     "\n",
     "This is telling us specific cases of what $L(y, F(X))$ can be."
    ]
@@ -417,9 +406,7 @@
    "id": "663c0ab8-112b-4fe7-977f-0fd600d346fd",
    "metadata": {},
    "source": [
-    "`A common procedure is to restrict F\u0004x\u0005 to be a member ofa parameterized\n",
-    "class offunctions F\u0004x P\u0005, where P = P1\u0004 P2\u0004\u0005\u0005\u0005 is a finite set ofparameters\n",
-    "whose joint values identify individual class members.`\n",
+    "> A common procedure is to restrict $F(\\bf{x})$ to be a member of a parameterized class of functions $F(\\bf{x}; \\bf{P})$, where $P = \\{P_1, P_2, ...\\}$ is a finite set of parameters whose joint values identify individual class members.\n",
     "\n",
     "I will give a concrete example here. Take simple linear regression. That takes the form of:\n",
     "\n",
@@ -427,9 +414,9 @@
     "\n",
     "To rewrite in the notation just given:\n",
     "\n",
-    "$F(x) = p_1 + p_2x$\n",
+    "$F(x; \\bf{P} ) = p_1 + p_2 x$\n",
     "\n",
-    "So $P = {p_1, p_2}$. Note that we fixed the function (basically) and now seek what the values of $b$ and $m$ are. I say basically because technically, each new set of parameters map out a different function. But all functions are restricted to be linear."
+    "So $P = \\{p_1, p_2\\}$. Note that we fixed the function (basically) and now seek what the values of $b$ and $m$ are. I say basically because technically, each new set of parameters map out a different function, but the models _structure_ remains the same (i.e., linear form)."
    ]
   },
   {
@@ -437,16 +424,9 @@
    "id": "d7ab351a-5815-4cda-ba13-9c3977be48e7",
    "metadata": {},
    "source": [
-    "`In this article we focus on on “additive” expansions ofthe form\n",
-    "F\u0004x βm\u0004 amM\n",
-    "1 \u0005 =\n",
-    "M\n",
-    "m=1\n",
-    "(2) βmh\u0004x am\u0005\u0005`\n",
+    "> In this article we focus on \"additive\" expansions of the form $F(\\bf{x}; \\{\\beta_m, \\bf{a}_m\\}_1^M) = \\sum_m \\beta_m h(\\bf{x}; \\bf{a}_m)$\n",
     "\n",
-    "This additive expansion is saying, we have `m` \"mini\" models that get added together. Each multiplied by a weight ($\\beta_m$. The $m$ denotes which mini-model we are referring to). Each mini-model is denoted as $h(x; a_m)$. The $a_m$ is telling us each mini-model itself has a set of parameters that need to be estimated from data. And these mini-models do not need to share parameters (would be interesting if a technique was developed where some of the mini-models _could_ share parameters).\n",
-    "\n",
-    "$h(x; a_m)$ can be a Decision tree, a naive bayes model, etc. IN the package XGBoost this min-model is referred to as the \"booster\". This is exactly what the next lines are saying:"
+    "This additive expansion is saying, we have $m$ models that get added together. Each multiplied by a weight of $\\beta_m$. (The $m$ denotes which model we are referring to. There are $m$ of them). Each model is denoted as $h(x; a_m)$. The $a_m$ is telling us each model itself has a set of parameters that need to be estimated from data. And these models do not share parameters (would be interesting to think of use-cases where parameter sharing might be beneficial). Also, I see no reason why each model must keep the same structural form (decision tree vs naive bayes). But in practice, and even in this paper, $h(x; a_m)$ is left to be a decision tree. In the package XGBoost for example, this model is referred to as the _booster_."
    ]
   },
   {
@@ -454,23 +434,9 @@
    "id": "47f634b4-df4e-45eb-a775-b4d77fe9774d",
    "metadata": {},
    "source": [
-    "`The (generic) function h\u0004x a\u0005 in (2) is usually a simple parameterized function ofthe input variables x, characterized by parameters a = a1\u0004 a2\u0004\u0005\u0005\u0005. The individual terms differ in the joint values am chosen for these parameters.`\n",
+    "> The (generic) function $h(\\bf{x}, a)$ in (2) is usually a simple parameterized function of the input variables $\\bf{x}$, characterized by parameters $\\bf{a} = \\{a_1, a_2, ... \\}$. The individual terms differ in the joint values $a_m$ chosen for these parameters.\n",
     "\n",
     "Yep. Each model will estimate $a_m$ to have different values than the others."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7d2eacd-e47f-4ac9-99af-752dbd2389d2",
-   "metadata": {},
-   "source": [
-    "`Such expansions (2) are at the heart of many function approximation methods such as neural networks [Rumelhart, Hinton, and Williams (1986)], radial\n",
-    "basis functions [Powell (1987)], MARS [Friedman (1991)], wavelets [Donoho\n",
-    "(1993)] and support vector machines [Vapnik (1995)]. Of special interest here\n",
-    "is the case where each ofthe functions h\u0004x am\u0005 is a small regression tree,\n",
-    "such as those produced by CART TM [Breiman, Friedman, Olshen and Stone\n",
-    "(1983)]. For a regression tree the parameters am are the splitting variables,\n",
-    "split locations and the terminal node means ofthe individual trees.`"
    ]
   },
   {
@@ -478,6 +444,8 @@
    "id": "306c4ffa-f9ec-42ec-a25f-11b52ba049b1",
    "metadata": {},
    "source": [
+    ">  Such expansions (2) are at the heart of many function approximation methods such as neural networks, radial basis functions, wavelets, and support vector machines. Of special interest here is the case where each of the functions $h(\\bf{x}; \\bf{a}_m)$ is a small regression tree, such as those produced in CART. For a regression tree the parameters $\\bf{a}_m$ are the splitting variables, split locations, and the terminal node means of the individual trees.\n",
+    "\n",
     "They mention a bunch of ML models where this type of additive model is applicable. But the one of interest here, is the regression tree (i.e., decision tree). To parameterize this tree, at each node we have to choose a variable and a split point for that variable. So here they are saying that $a_m$ will denote the feature chosen for each node and its split point. We can count the number of parameters. At depth $l$ we will have $2^l$ nodes. So there are:\n",
     "\n",
     "$\\text{number of decision nodes} = \\sum_l^{D} 2^l$ where $D$ is the max depth\n",
@@ -493,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "id": "e04ed3dd-4f48-4c4f-90e6-cc1ebecd91e2",
    "metadata": {},
    "outputs": [
@@ -503,7 +471,7 @@
        "131070"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,29 +491,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12b16207-39a8-431b-a1ac-8570e39d604d",
+   "metadata": {},
+   "source": [
+    "# 1.1 Numerical Optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8d354515-bb52-48cb-8f9b-9a7542f93245",
    "metadata": {},
    "source": [
-    "`F\u0004x P\u0005 changes the function optimization problem to one of parameter optimization,\n",
-    "P∗ = arg minP\n",
-    "(3) \u0013\u0004P\u0005\u0004\n",
+    "> In general, choosing a parameterized model $F(\\bf{x}; \\bf{P})$ changes the function optimization problem to one of parameter optimization\n",
+    "<br />\n",
+    "$P^* = \\text{argmin}_P \\Phi(\\bf{P})$\n",
+    "<br />\n",
+    "<br />\n",
     "where\n",
-    "\u0013\u0004P\u0005 = Ey\u0004 xL\u0004y\u0004 F\u0004x P\u0005\u0005\n",
+    "$ \\Phi(P) = E_{y, x} L(y, F(x; P))$\n",
+    "<br />\n",
+    "<br />\n",
     "and then\n",
-    "F∗\u0004x\u0005 = F\u0004x P∗\u0005\u0005\n",
-    "For most F\u0004x P\u0005 and L, numerical optimization methods must be applied to\n",
-    "solve (3). This often involves expressing the solution for the parameters in the\n",
-    "form\n",
-    "P∗ =\n",
-    "M\n",
-    "m=0\n",
-    "(4) pm\u0004\n",
-    "where p0 is an initial guess and pmM\n",
-    "1 are successive increments (“steps” or\n",
-    "“boosts”), each based on the sequence ofpreceding steps. The prescription for\n",
-    "computing each step pm is defined by the optimization method.`\n",
+    "$ F^*(x) = F(x; P^*)$\n",
     "\n",
-    "In neural networks, we leverage gradient descent. The weight parameters get updated at each step by adding a value to them. Sp the final weights learned are a sum of the weight updates from each step. That is: \n",
+    "Yes. In linear regression we (typically) use the loss function of least squares to find the best set of parameters. But the key here is that we fix the structure of the model and optimize over the parameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94e9c338-6e1d-4538-a647-d229e224612f",
+   "metadata": {},
+   "source": [
+    "> For most $F(x; P)$ and L, numerical optimization methods must be applied to solve $P^* = \\text{argmin}_P \\Phi(\\bf{P})$. This often involves expression the solution for the parameters in the form\n",
+    "<br />\n",
+    "<br />\n",
+    "$P^* = \\sum_{m=0}^M p_m$\n",
+    "<br />\n",
+    "<br />\n",
+    "where $p_0$ is the an initial guess and $\\{ p_m\\}_1^M $ are successive increments (\"steps\" or \"boosts\"), each based on the sequence of preceding steps. The precription for computing each step $p_m$ is defined by the optimization method.\n",
+    "\n",
+    "in neural networks, we leverage gradient descent. The weight parameters get updated at each step by adding a value to them. Sp the final weights learned are a sum of the weight updates from each step. That is: \n",
     "\n",
     "$\\vec{w}_{final} = \\sum_i w_i$\n",
     "\n",
@@ -554,22 +539,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d13ad7d-90de-4977-b353-93d10a292445",
+   "metadata": {},
+   "source": [
+    "# 1.2 Stepest-descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a1ff3629-30fa-4db8-9e0c-bafbfe1f6a8c",
    "metadata": {},
    "source": [
-    "`1.2. Steepest-descent. Steepest-descent is one ofthe simplest ofthe frequently used numerical minimization methods. It defines the increments pmM\n",
-    "1\n",
-    "(4) as follows. First the current gradient gm is computed: where\n",
-    "Pm−1 =\n",
-    "m\n",
-    "−1\n",
-    "i=0\n",
-    "pi\u0005\n",
-    "The step is taken to be\n",
-    "pm = −ρmgm\u0004\n",
-    "where\n",
-    "ρm = arg minρ (5) \u0013\u0004Pm−1 − ρgm\u0005\u0005\n",
-    "The negative gradient −gm is said to define the “steep`\n",
+    "> Steepest-descent is one of the simplest of the frequently used numerical minimization methods. It defines the increments\n",
     "\n",
     "Here, we take the gradient of our loss function with respect to the parameter in context (the $jth$ parameter) for the _mth_ model.\n",
     "\n",
